--- a/style.css
+++ b/style.css
@@ -18,12 +18,18 @@ section{
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background: url(images/bg111.png)no-repeat;
+    background: url(images/bg111.png)no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
 }
 
+@media (max-width: 1300px) {
+  .main {
+   background-position: 80% 30%;
+
+  }
+}
 .main .content{
   max-width: 800px;
 }
@@ -427,6 +433,7 @@ body{
   transition: 0.5s ease;
 }
 
+
 .work .content .card .card-img img:hover{
   transform: scale(1.2);
 }
@@ -733,35 +740,6 @@ color: #3a6cf4;
   opacity: 1;
 }
 
-/* portoflio */
-/* 
-.my-ul {
-   display: block;
-   list-style-type: disc;
-   margin-block-start: 1em;
-   margin-block-end: 1em;
-   margin-inline-start: 0px;
-   margin-inline-end: 0px;
-   padding-inline-start: 40px;
-} */
-/* 
-.my-ul li {
-   padding: 0;
-     display: inline-block;
-   margin: 0 auto 35px auto;
-   list-style: none;
-   text-align: center;
-   background: #fff;
-   border-radius: 50px;
-   padding: 2px 15px;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-} */
-
-
-
-
 
 .box-menu {
   text-align: center;
@@ -824,3 +802,23 @@ transform: rotate(3deg) scale(1.1);
   transition: all 1.5s ease;
 }
 
+/* mixitup */
+@media (max-width:530px) {
+  #work>div.container>div>div.col-lg-12>div>ul>li:nth-child(3) {
+    margin-top: -55px;
+  }
+  /* for typed script */
+  .typed {
+    font-size: 1.5rem;
+  }
+  
+}
+
+  /* for typed script */
+
+@media only screen and (min-width: 768px) {
+  .type-br {
+    display: none;
+  }
+  
+}
